# cubot_version

./: README.md
10_22/: 7_1.txt  CMakeLists.txt  程序运行流程
10_22/Fuwen/: 0725_final.pb  CMakeLists.txt  DafuDetector2.hpp  DigitronDetector(svm_tube).hpp  NumClass.hpp  ParaReader.h  config (copy).xml  config.xml  corner.txt  process.h
10_22/bash/: imgProc.sh  superVisor.md
10_22/cfg/: MengCfg.yml  camera_config.xml  svm_hog_infantry.xml
10_22/gold/: ArmorHitTest.cpp  CMakeLists.txt  bar_points.cpp  coordinante_process.cpp  my.cpp  pro_file.cpp
10_22/include/armor/: LDAclassify.h
10_22/src_cam/: camDaHua_node.cpp  streamRetrieve.cpp
10_22/src_cubot/: PublishAsync.cpp  Serial_port.cpp  SubscribeAsync.cpp  imgProc.cpp
10_22/tools/: CMakeLists.txt  pictures_pub.cpp  videoWrite.cpp
cubotversion_drone_phase3/: CMakeLists.txt
cubotversion_drone_phase3/armor/: armor_main.cpp  bar_points.cpp  coordinante_process.cpp
cubotversion_drone_phase3/bash/: camDaHua_node.sh  imgProc.sh  superVisor.md
cubotversion_drone_phase3/cfg/: 718_svm_hog_sentry_bin.xml  MengCfg.yml  daHuaCamConfig.yml
cubotversion_drone_phase3/src_cam/: CMakeLists.txt  camParaConfig.cpp
cubotversion_drone_phase3/src_cubot/: Serial_port.cpp  commuca2BigGun.cpp  imgProc.cpp
cubotversion_drone_phase3/tools/: hsv.cpp  train_svm.cpp  videoPublish.cpp  videoWrite.cpp
cubotversion_drone_pure_phase2/armor/: armor_main.cpp  bar_points.cpp  coordinante_process.cpp
cubotversion_drone_pure_phase2/cfg/: camera_params_UAV.yml
cubotversion_drone_pure_phase2/src_cam/: camDaHua_node.cpp  streamRetrieve.cpp
cubotversion_drone_pure_phase2/src_cubot/: imgProc.cpp
cubotversion_drone_pure_phase2/tools/: CMakeLists.txt
cubotversion_hero_cannon_phase3/armor/: armor_main.cpp  bar_points.cpp  coordinante_process.cpp  pro_file.cpp
cubotversion_hero_cannon_phase3/bash/: cannon_imgProc.sh  superVisor.md
cubotversion_hero_cannon_phase3/cfg/: AutoHitCfg.yml  camera_params_cam_5.yml  daHuaCamConfig.yml
cubotversion_hero_cannon_phase3/python/: png2jpg.py
cubotversion_hero_cannon_pure_phase2/: CMakeLists.txt
cubotversion_hero_smallcannon_phase3/: 6_28.txt  smallgun_Port
cubotversion_hero_smallcannon_pure_phase1/: CMakeLists.txt  supervisord.conf
cubotversion_hero_smallcannon_pure_phase1/armor/: coordinante_process.cpp
cubotversion_hero_smallcannon_pure_phase1/include/armor/: coordinante_process.h
cubotversion_hero_smallcannon_pure_phase1/include/daHua_usb/: camParaConfig.h
cubotversion_hero_smallcannon_pure_phase1/tools/: videoPublish.cpp  videoWrite.cpp
cubotversion_infantry_phase3/: ReadMe.txt
cubotversion_infantry_phase3/tools/: CMakeLists.txt  pictures_pub.cpp
cubotversion_infantry_pure_phase2/: CMakeLists.txt
(+87 files in other folders)
